--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 
  version: 2.1
  jobs:
-    install:
+    build:
       docker:
         - image: circleci/node:dubnium-browsers
       working_directory: ~/repo
