--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,32 @@
             paths:
                - node_modules
             key: $CACHE_VERSION-dependencies-{{ checksum "package.json" }}
+     
+    lint:
+      steps:
+         -checkout
+         - restore_cache:
+            keys:
+              - dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+              # fallback to using the latest cache if no exact match is found
+              - dependencies-
+         -run: yarn lint
+         -run: yarn format:check
+
+     unit:
+       steps:
+         -checkout
+         - restore_cache:
+            keys:
+              - dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+              # fallback to using the latest cache if no exact match is found
+              - dependencies-
+         -run: yarn test:ci
+       
+workflow:
+  version:2
+  build-lint-and-unit:
+    jobs:
+      -build
+      -lint
+      -unit
