--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,6 @@ workflow:
     jobs:
       - build
       - lint
-        requires:build
       - unit
-        requires:build
+    requires:
+      - build
