--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             - node_modules
           key: $CACHE_VERSION-dependencies-{{ checksum "package.json" }}
 
-  lint:
+  test:
     steps:
       - checkout
       - restore_cache:
@@ -28,7 +28,7 @@ jobs:
       - run: yarn lint
       - run: yarn format:check
 
-  unit:
+  test1:
     steps:
       - checkout
       - restore_cache:
@@ -40,13 +40,13 @@ jobs:
 
 workflow:
   version: 2
-  build_lint_and_unit:
+  build_test_and_deploy:
     jobs:
       - build
-      - lint:
+      - test:
           requires:
             - build
-      - unit:
+      - test1:
           requires:
             - build
       
